# taintchecker

./: CMakeLists.txt  README.md  setup.sh
cmake/: FindClang.cmake  FindXML.cmake
examples/: README.md  run-examples.sh
examples/conf/: taint-conf.xml
examples/heartbleed/: README.md  config-openssl.xml
examples/heartbleed/heartbleed-report/: index.html  report-00de72.html  report-014cc9.html  report-01e87f.html  report-04a1af.html  report-0616aa.html  report-0a9b9a.html  report-0b46dc.html  report-0b5e3c.html  report-0ca10e.html  report-0d4545.html  report-13d846.html  report-13fabf.html  report-1406a7.html  report-153a46.html  report-17a608.html  report-17e4eb.html  report-197f42.html  report-1ac252.html  report-1c2094.html  report-1fdb43.html  report-20597a.html  report-211ee7.html  report-219418.html  report-22b94a.html  report-247a21.html  report-26a29d.html  report-272b91.html  report-27bfba.html  report-284562.html  report-284b8c.html  report-28aac2.html  report-28c95a.html  report-2ab218.html  report-2b09b0.html  report-2cdaf8.html  report-2dd35d.html  report-2e9440.html  report-3064da.html  report-3312b3.html  (+163 more)
examples/heartbleed/openssl-1.0.1f/ssl/: ssl_locl.h
examples/src/: Util.h  alias-example.cpp  compound-example.cpp  conditional-source.cpp  filter-taint.cpp  macro-example.cpp  propagate-taint.cpp
schemas/: taint-rules.xsd
src/: CMakeLists.txt  CustomTaintChecker.cpp  TaintParser.cpp  TaintUtil.cpp  TaintVisitor.cpp
src/includes/: TaintConfig.h.cmake  TaintParser.h  TaintPropagation.h  TaintUtil.h  TaintVisitor.h
